pushing to repo for feedback on code

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>User#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<br></br>
+<br></br>
+<h2> Edit Your Account</h2>
+<%= render 'form' %>
