--- a/app/views/trivia/edit.html.erb
+++ b/app/views/trivia/edit.html.erb
@@ -1,11 +1,1 @@
-<h1>Editing <%= @song.title %></h1>
-
-<%= form_for @song  do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <br />
-
-  <%= f.submit %>
-<% end %>
-
-
+<h1>Edit me! </h1>
