--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,86 @@
-<h1>User#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<!-- Intro Header -->
+    <header class="masthead">
+      <div class="intro-body">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <h3 class="brand-heading">web dev trivia</h3>
+              <p class="intro-text">How much do you really know?
+                <br></p>
+                <br>
+              <a href="#about" class="btn btn-circle js-scroll-trigger">
+                <i class="fa fa-angle-double-down animated"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header
+
+    <!-- Create an Account Section -->
+    <section id="about" class="content-section text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+
+            <h2>Start Learning Here</h2>
+            <br></br>
+            <a href="/users/new" class="btn btn-default btn-lg">Create an Account</a><br></br>
+            <a href="/logins/new" class="btn btn-default btn-lg">Log In</a>
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- All Users Section -->
+    <section id="download" class="download-section content-section text-center">
+      <div class="container">
+        <div class="col-lg-8 mx-auto">
+            <h2>Test Your Knowledge with Friends</h2>
+
+            <ul><% @allusers.each do |user| %>
+                <ol> <%= user.username %> </ol>
+            <% end %></ul>
+
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="content-section text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>Contact</h2>
+            <p>Feel free to leave us a comment on the
+              <a href="https://github.com/eyosef/web-dev-trivia">Github repo</a>
+              to give feedback on this web app!</p>
+            <ul class="list-inline banner-social-buttons">
+              <li class="list-inline-item">
+                <a href="https://twitter.com/EduMesfun" class="btn btn-default btn-lg">
+                  <i class="fa fa-twitter fa-fw"></i>
+                  <span class="network-name">Twitter</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://github.com/eyosef/web-dev-trivia" class="btn btn-default btn-lg">
+                  <i class="fa fa-github fa-fw"></i>
+                  <span class="network-name">Github</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="http://edensenait.com/" class="btn btn-default btn-lg">
+                  <i class="fa fa-google-plus fa-fw"></i>
+                  <span class="network-name">Read My Blog</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Map Section -->
+    <div id="map"></div>
